    * Mirror configuration files can now specify uploadRateLimit and
      downloadRateLimit.
    * Updates utilizing changeset files are now split into multiple
      jobs properly, allowing changeset files which create users to
      work proprely.
    * "conary rollback" now displays progress information that matches
      the "conary update" progress information.

  o Bug Fixes:
    * A bug that caused an assertion error when switching from an
      incomplete trove to a complete trove has been fixed.
    * A bug in perl dependencies that caused extra directories to be
      considered part of the dependency has been fixed.
    * A bug affecting updates where a pinned, partially installed
      package was supposed to be updated due to dependency resolution
      has been fixed.
    * A bug that prevented updates from working when part of a locally
      cooked package was replaced with a non-locally cooked component
      has been fixed.  The bug was introduced in Conary 1.0.8.
    * A bug that caused a segfault when providing an invalid type to
      StringStream has been fixed.
    * The troveInfo web page in the repository browser now displays
      useful error messages instead of traceback messages.  The
      troveInfo page also handles both frozen and non-frozen version
      strings.
    * A bug that caused conary to download unnecessary files when checking out
      shadow sources has been fixed.
    * A bug that caused "cvc rdiff" between versions of a trove that
      were on different hosts to fail has been fixed.

Changes in 1.0.9:
  o Client Changes:
    * A new dependency resolution method has been added which can be turned
      on by setting resolveLevel to 2 in your conarycfg:  If updating trove 'a'
      removes a dependency needed by trove 'b', attempt to update 'b' to
      solve the dependency issue.  This will allow 'conary update conary'
      to work as expected when you have conary-build installed, for example.