@@ -18,6 +18,7 @@ from conary import versions
 from conary.conaryclient import ConaryClient, cmdline
 from conary.build.cook import signAbsoluteChangeset
 from conary.conarycfg import selectSignatureKey
+from conary.deps import deps
 
 def displayCloneJob(cs):
     
@@ -31,7 +32,7 @@ def displayCloneJob(cs):
         print "%sClone  %-20s (%s)" % (indent, csTrove.getName(), newInfo)
 
 def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
-               info = False):
+               info = False, cloneSources = False):
     client = ConaryClient(cfg)
     repos = client.getRepos()
 
@@ -45,11 +46,29 @@ def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
         raise errors.ParseError('Cannot clone components: %s' % ', '.join(componentSpecs))
 
 
-    cloneSources = repos.findTroves(cfg.installLabelPath, 
+    trovesToClone = repos.findTroves(cfg.installLabelPath, 
                                     troveSpecs, cfg.flavor)
-    cloneSources = list(itertools.chain(*cloneSources.itervalues()))
+    trovesToClone = list(itertools.chain(*trovesToClone.itervalues()))
 
-    okay, cs = client.createCloneChangeSet(targetBranch, cloneSources,
+    if cloneSources:
+        binaries = [ x for x in trovesToClone if not x[0].endswith(':source')]
+        seen = set(binaries)
+        while binaries:
+            troves = repos.getTroves(binaries, withFiles=False)
+            binaries = []
+            for trove in troves:
+                trovesToClone.append((trove.getSourceName(),
+                                      trove.getVersion().getSourceVersion(),
+                                      deps.DependencySet()))
+                for troveTup in trove.iterTroveList(strongRefs=True,
+                                                    weakRefs=True):
+                    if troveTup not in seen:
+                        binaries.append(troveTup)
+            seen.update(binaries)
+
+        trovesToClone = list(set(trovesToClone))
+
+    okay, cs = client.createCloneChangeSet(targetBranch, trovesToClone,
                                            updateBuildInfo=updateBuildInfo)
     if not okay:
         return
